--- a/preamble.tex
+++ b/preamble.tex
@@ -140,6 +140,7 @@
 \newcommand*{\tuple}[1]{\ltuple#1\rtuple}
 \newcommand*{\floor}[1]{\left\lfloor#1\right\rfloor}
 \newcommand*{\ceil}[1]{\left\lceil#1\right\rceil}
+\newcommand*{\len}[1]{\left|#1\right|}
 \newcommand*{\fnfrac}[2]{\left\lfloor\nicefrac{#1}{#2}\right\rfloor}
 \newcommand*{\ffrac}[2]{\left\lfloor\frac{#1}{#2}\right\rfloor}
 \newcommand*{\transpose}{{}^\text{T}}
@@ -176,6 +177,7 @@
 \newcommand*{\wr¬srlookup}{\mathbf{l}}
 \newcommand*{\wr¬authoutput}{\mathbf{o}} % TODO: Consider renaming to \mathbf{u} to free up \mathbf{o}
 \newcommand*{\wr¬results}{\mathbf{r}} % TODO: Consider renaming to avoid overloading \mathbf{r} reports vs results; maybe \mathbf{t} for results
+\newcommand*{\wr¬authgasused}{g}
 
 % TODO: Standardize and fully check this:
 % p P: work Packages
