Fix the definition of sans-D

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -183,7 +183,7 @@ These terms are all contextualized to a single block. They may be superscripted 
   \item[$\mathbf{U}$] The audit condition, equal to $\top$ once the block is audited. See section \ref{sec:auditing}.
   \item[$\mathbf{V}$] The set of verdicts in the present block. See equation \ref{eq:verdicts}.\\
   \item[$\mathbf{W}$] The sequence of work-reports which have now become available and ready for accumulation. See equation \ref{eq:availableworkreports}.
-  \item[$\mathbf{X}$] The sequence of transfers implied by the block's accumulations. See equation \ref{eq:deferredtransfers}.\\
+  \item[$\mathbf{X}$] The sequence of transfers implied by the block's accumulations. See equation \ref{eq:{deferredtransfers}}.\\
 \end{description}
 
 Without any superscript, the block is assumed to the block being imported or, if no block is being imported, the head of the best chain (see section \ref{sec:bestchain}). Explicit block-contextualizing superscripts include:
@@ -263,7 +263,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{B}_L = 1$] The additional minimum balance required per octet of elective service state.
   \item[$\mathsf{B}_S = 100$] The basic minimum balance which all services require.
   \item[$\mathsf{C} = 341$] The total number of cores.
-  \item[$\mathsf{D} = 28,800$] The period in timeslots after which an unreferenced preimage may be expunged.
+  \item[$\mathsf{D} = 19,200$] The period in timeslots after which an unreferenced preimage may be expunged.
   \item[$\mathsf{E} = 600$] The length of an epoch in timeslots.
   \item[$\mathsf{F} = 2$] The audit bias factor, the expected number of additional validators who will audit a work-report in the following tranche for each no-show in the previous.
   \item[$\mathsf{G}_A = 10,000,000$] The gas allocated to invoke a work-report's Accumulation logic.
