PCM: Fix B.7 question mark

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -111,7 +111,7 @@ Formally, we define our result context to be $\mathbf{X}$, and our invocation co
     \isa{\mathbf{u}}{\partialstate},
     \isa{i}{\N_S},
     \isa{\mathbf{t}}{\seq{\mathbb{T}}},
-    \isa{y}{\maybe{\H}}
+    \isa{y}{\H\bm{?}}
   }\\
   \forall \mathbf{x} \in \mathbf{X} : \mathbf{x}_\mathbf{s} &\equiv (\mathbf{x}_\mathbf{u})_\mathbf{d}[\mathbf{x}_s]
 \end{align}
