--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -141,7 +141,7 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
   \se(x \in \mathbb{X}) &\equiv \se(x_a, x_s, x_b, x_l)\concat\se_4(x_t)\concat\se(\var{x_\mathbf{p}})\\
   \se(x \in \mathbb{S}) &\equiv \se(x_h) \concat \se_4(x_l)\concat\se(x_u, x_e) \concat \se_2(x_n) \\
   \se(x \in \mathbb{L}) &\equiv \se(\se_4(x_s), x_c, x_y, \se_8(x_g), O(x_\wl¬data), x_u, x_i, x_x, x_z, x_e)\\
-  \se(x \in \mathbb{W}) &\equiv \se(x_s, x_x, x_c, x_a, \var{x_\wr¬authoutput}, \var{x_\mathbf{l}}, \var{x_\wr¬results}, x_g) \\
+  \se(x \in \mathbb{W}) &\equiv \se(x_s, x_x, x_c, x_a, \var{x_\wr¬authoutput}, \var{x_\mathbf{l}}, \var{x_\wr¬results}, \se_8(x_g)) \\
   \se(x \in \mathbb{P}) &\equiv \se(\var{x_\wp¬authtoken}, \se_4(x_\wp¬authcodehost), x_\wp¬authcodehash, \var{x_\wp¬authparam}, x_\wp¬context, \var{x_\wp¬workitems}) \\
   % TODO: \se_4(i) should be just \se(i), but we should wait for this to be written.
   \se(x \in \mathbb{I}) &\equiv \se(
