fix deferred transfer label link

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -232,6 +232,7 @@ The second intermediate state $\accountspostxfer$ may then be defined with all t
 
 Furthermore we build the deferred transfers statistics value $\mathbf{X}$ as the number of transfers and the total gas used in transfer processing for each \emph{destination} service index. Formally:
 \begin{align}
+  \label{eq:deferredtransfers}
   &\mathbf{X} \in \dict{\N_S}{\tuple{\N, \N_G}} \\
   &\textstyle \mathbf{X} \equiv \left\{ d \mapsto \tup{\len{R(\mathbf{t}, d)}, u} \;\middle\vert\; \begin{aligned}
     R(\mathbf{t}, d) &\ne [],\\ \exists a: \mathbf{x}[d] &= (a, u)
