--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -183,7 +183,7 @@ These terms are all contextualized to a single block. They may be superscripted 
   \item[$\mathbf{U}$] The audit condition, equal to $\top$ once the block is audited. See section \ref{sec:auditing}.
   \item[$\mathbf{V}$] The set of verdicts in the present block. See equation \ref{eq:verdicts}.\\
   \item[$\mathbf{W}$] The sequence of work-reports which have now become available and ready for accumulation. See equation \ref{eq:availableworkreports}.
-  \item[$\mathbf{X}$] The sequence of transfers implied by the block's accumulations. See equation \ref{eq:{deferredtransfers}}.\\
+  \item[$\mathbf{X}$] The sequence of transfers implied by the block's accumulations. See equation \ref{eq:deferredtransfers}.\\
 \end{description}
 
 Without any superscript, the block is assumed to the block being imported or, if no block is being imported, the head of the best chain (see section \ref{sec:bestchain}). Explicit block-contextualizing superscripts include:
