--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -207,7 +207,7 @@ Given the result of the top-level $\Delta_+$, we may define the posterior state 
   &(\chi', \accountspostacc, \iota', \varphi') \equiv \mathbf{o}
 \end{align}
 
-We compose $\mathbf{I}$, our accumulation statistics, which is a mapping from the service indices which were accumulated to the amount of gas used throughout accumulation and the number of work-reports accumulated. Formally:
+We compose $\mathbf{I}$, our accumulation statistics, which is a mapping from the service indices which were accumulated to the amount of gas used throughout accumulation and the number of work-items accumulated. Formally:
 \begin{align}
   &\mathbf{I} \in \dict{\N_S}{\tuple{\N_G, \N}} \\
   &\textstyle \mathbf{I} \equiv \left\{ s \mapsto \tup{\sum_{(s, u) \in \mathbf{u}}(u), \len{N(s)}} \;\middle\mid\; N(s) \ne [] \right\} \\
