chore(pvm): update references and sync symbols (#323)
* chore(appendix-A): compress host and fault in (A.1) as described in the following paragraphs

* chore(nonation): redirect ram reference to overview

* chore(definition): use equation for ram

* chore(pvm): concat a to the end of standard format

* chore(pvm): the account retrieving are the same in lookup and read

* Revert "chore(pvm): the account retrieving are the same in lookup and read"

This reverts commit 986a81702286280f2a7472cb53c92251fa9a527d.

* chore(pvm): remove unused I function in the first branch of invocation call

* chore(accumulation): use wideparen t in the formula of parallel accumulation

* Revert "chore(accumulation): use wideparen t in the formula of parallel accumulation"

This reverts commit 89c82413ec4e1fe2d89d7dec9538f5aaaf918444.

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -51,7 +51,7 @@
   \item[$\mathbb{J}$] The set of work execution errors.
   \item[$\mathbb{K}$] The set of validator key-sets. See equation \ref{eq:validatorkeys}.
   \item[$\mathbb{L}$] The set of work results.
-  \item[$\mathbb{M}$] The set of \textsc{pvm} \textsc{ram} states. A superset of $\Y_{2^{32}}$. See appendix \ref{sec:virtualmachine}.
+  \item[$\mathbb{M}$] The set of \textsc{pvm} \textsc{ram} states. See equation \ref{eq:pvmmemory}.
   \item[$\mathbb{O}$] The accumulation operand element, corresponding to a single work result.
   \item[$\mathbb{P}$] The set of work-packages. See equation \ref{eq:workpackage}.
   \item[$\mathbb{S}$] The set of availability specifications.
