Introduce gas limit into operand tuples

--- a/preamble.tex
+++ b/preamble.tex
@@ -188,11 +188,21 @@
 % y: work payload
 
 \newcommand*{\wl¬data}{\mathbf{d}}
+\newcommand*{\wl¬gaslimit}{g}
 \newcommand*{\wl¬payloadhash}{y}
+
+\newcommand*{\ot¬packagehash}{h}
+\newcommand*{\ot¬segroot}{e}
+\newcommand*{\ot¬authorizer}{a}
+\newcommand*{\ot¬authoutput}{\mathbf{o}}
+\newcommand*{\ot¬payloadhash}{y}
+\newcommand*{\ot¬gaslimit}{g}
+\newcommand*{\ot¬data}{\mathbf{d}}
 
 \newcommand*{\accumulated}{\xi}
 \newcommand*{\ready}{\vartheta}
 
+\newcommand*{\operandtuple}{\mathbb{O}}
 \newcommand*{\partialstate}{\mathbb{U}}
 \newcommand*{\defxfer}{\mathbb{T}}
 \newcommand*{\defxfers}{\seq{\defxfer}}
