--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -124,7 +124,7 @@ We define $\Psi_A$, the Accumulation invocation function as:
 \begin{align}
   \Psi_A& \colon\left\{\begin{aligned}
     \tuple{
-      \partialstate, \N_T, \N_S, \N_G, \seq{\mathbb{O}}
+      \partialstate, \N_T, \N_S, \N_G, \seq{\operandtuple}
     }
     &\to
     \tuple{\partialstate, \defxfers, \H\bm{?}, \N_G} \\
