--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -155,16 +155,17 @@ We come to define the parallelized accumulation function $\Delta_*$ which, with 
 We note that while forming the union of all altered, newly added service and newly removed indices, defined in the above context as $\keys{\mathbf{n}} \cup \mathbf{m}$, different services may not each contribute the same index for a new, altered or removed service. This cannot happen for the set of removed and altered services since the code hash of removable services has no known preimage and thus cannot execute itself to make an alteration. For new services this should also never happen since new indices are explicitly selected to avoid such conflicts. In the unlikely event it does happen, the block must be considered invalid.
 
 The single-service accumulation function, $\Delta_1$, transforms an initial state-context, sequence of work-reports and a service index into an alterations state-context, a sequence of \emph{transfers}, a possible accumulation-output and the actual \textsc{pvm} gas used. This function wrangles the work-items of a particular service from a set of work-reports and invokes \textsc{pvm} execution with said data:
-\begin{align}
-  &\mathbb{O} \equiv \tuple{
-    \isa{h}{\H},
-    \isa{e}{\H},
-    \isa{a}{\H},
-    \isa{\mathbf{o}}{\Y},
-    \isa{y}{\H},
-    \isa{\mathbf{d}}{\Y \cup \mathbb{J}}
+\begin{equation}
+  \operandtuple \equiv \tuple{
+    \isa{\ot¬packagehash}{\H},
+    \isa{\ot¬segroot}{\H},
+    \isa{\ot¬authorizer}{\H},
+    \isa{\ot¬authoutput}{\Y},
+    \isa{\ot¬payloadhash}{\H},
+    \isa{\ot¬gaslimit}{\N_G},
+    \isa{\ot¬data}{\Y \cup \mathbb{J}}
   }
-\end{align}
+\end{equation}
 \begin{align}
     &\Delta_1 \colon \left\{\;\begin{aligned}
     &\begin{aligned}
@@ -179,24 +180,28 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
     &\text{where:} \\
     &\ \begin{aligned}
       g &= \subifnone(\mathbf{f}_s, 0) + \!\!\!\!\sum_{w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r} , \mathbf{r}_s = s}\!\!\!\!(\mathbf{r}_g) \\
-      \mathbf{p} &= \left[ \tup{\begin{alignedat}{5}
+      \mathbf{p} &= \left[ \tup{\begin{alignedat}{3}
         % TODO: Rename \mathbf{o} to something else, to allow mathbf{a} to become \mathbf{o}.
         % TODO: Rename k to h. Then 5 of the 6 fields keep their names.
-        \is{\mathbf{d}&}{\mathbf{r}_\wl¬data},
-        \is{&e&}{(w_s)_e},
-        \is{&\mathbf{o}&}{w_\wr¬authoutput},\\
-        \is{y&}{\mathbf{r}_\wl¬payloadhash},
-        \is{&h&}{(w_s)_h},
-        \is{&a&}{w_a}
+        \is{\mathbf{d}}{\mathbf{r}_\wl¬data},\,
+        \is{\ot¬gaslimit}{\mathbf{r}_\wl¬gaslimit},\,
+        \is{y}{\mathbf{r}_\wl¬payloadhash},\,
+        \is{&\mathbf{o}\;&}{w_\wr¬authoutput&},\\
+        \is{e}{(w_s)_e},\,
+        \is{h}{(w_s)_h},\,
+        \is{&a\;&}{w_a&}
       \end{alignedat}}
       \,\middle\vert\ 
-      w \orderedin \mathbf{w}, \mathbf{r} \orderedin w_\mathbf{r}, \mathbf{r}_s = s
+      \begin{alignedat}{2}
+        w& \orderedin \mathbf{w},&\\
+        \mathbf{r}& \orderedin w_\mathbf{r},&\ \mathbf{r}_s = s
+      \end{alignedat}
     \,\right]
     \end{aligned}
   \end{aligned}\right.\!\!\!\!
 \end{align}
 
-This introduces $\mathbb{O}$, the set of wrangled \emph{operand tuples}, used as an operand to the \textsc{pvm} Accumulation function $\Psi_A$. It also draws upon $g$, the gas limit implied by the work-reports and gas-privileges for $s$ and $\mathbf{p}$, a rephrasing of the work-items for $s$ within $\mathbf{w}$ into a sequence of operand tuples $\mathbb{O}$.
+This introduces $\operandtuple$, the set of wrangled \emph{operand tuples}, used as an operand to the \textsc{pvm} Accumulation function $\Psi_A$: work-items (together with associated data in their work-packages) are rephrased into a sequence of such operand tuples $\mathbf{p}$. It also draws upon $\wl¬gaslimit$, the gas limit implied by the work-reports and gas-privileges.
 
 \subsection{Deferred Transfers and State Integration}
 
