--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -52,7 +52,7 @@
   \item[$\mathbb{K}$] The set of validator key-sets. See equation \ref{eq:validatorkeys}.
   \item[$\mathbb{L}$] The set of work results.
   \item[$\mathbb{M}$] The set of \textsc{pvm} \textsc{ram} states. A superset of $\Y_{2^{32}}$. See appendix \ref{sec:virtualmachine}.
-  \item[$\mathbb{O}$] The accumulation operand element, corresponding to a single work result.
+  \item[$\operandtuple$] The accumulation operand element, corresponding to a single work result.
   \item[$\mathbb{P}$] The set of work-packages. See equation \ref{eq:workpackage}.
   \item[$\mathbb{S}$] The set of availability specifications.
   \item[$\mathbb{T}$] The set of deferred transfers.
