--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -8,7 +8,7 @@
 
 Accumulation may be defined as some function whose arguments are $\mathbf{W}$ and $\delta$ together with selected portions of (at times partially transitioned) state and which yields the posterior service state $\accountspostpreimage$ together with additional state elements $\iota'$, $\varphi'$ and $\chi'$.
 
-The proposition of accumulation is in fact quite simple: we merely wish to execute the \emph{Accumulate} logic of the service code of each of the services which has at least one work output, passing to it the work outputs and useful contextual information. However, there are three main complications. Firstly, we must define the execution environment of this logic and in particular the host functions available to it. Secondly, we must define the amount of gas to be allowed for each service's execution. Finally, we must determine the nature of transfers within Accumulate which, as we will see, leads to the need for a second entry-point, \emph{on-transfer}.
+The proposition of accumulation is in fact quite simple: we merely wish to execute the \emph{Accumulate} logic of the service code of each of the services which has at least one work-digest, passing to it relevant data from said digests together with useful contextual information. However, there are three main complications. Firstly, we must define the execution environment of this logic and in particular the host functions available to it. Secondly, we must define the amount of gas to be allowed for each service's execution. Finally, we must determine the nature of transfers within Accumulate which, as we will see, leads to the need for a second entry-point, \emph{on-transfer}.
 
 
 
@@ -160,10 +160,10 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
     \isa{\ot¬packagehash}{\H},
     \isa{\ot¬segroot}{\H},
     \isa{\ot¬authorizer}{\H},
-    \isa{\ot¬authoutput}{\Y},
+    \isa{\ot¬authtrace}{\Y},
     \isa{\ot¬payloadhash}{\H},
     \isa{\ot¬gaslimit}{\N_G},
-    \isa{\ot¬data}{\Y \cup \mathbb{J}}
+    \isa{\ot¬result}{\Y \cup \mathbb{J}}
   }
 \end{equation}
 \begin{align}
@@ -183,10 +183,10 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
       \mathbf{p} &= \left[ \tup{\begin{alignedat}{3}
         % TODO: Rename \mathbf{o} to something else, to allow mathbf{a} to become \mathbf{o}.
         % TODO: Rename k to h. Then 5 of the 6 fields keep their names.
-        \is{\mathbf{d}}{\mathbf{r}_\wl¬data},\,
+        \is{\mathbf{d}}{\mathbf{r}_\wl¬result},\,
         \is{\ot¬gaslimit}{\mathbf{r}_\wl¬gaslimit},\,
         \is{y}{\mathbf{r}_\wl¬payloadhash},\,
-        \is{&\mathbf{o}\;&}{w_\wr¬authoutput&},\\
+        \is{&\mathbf{o}\;&}{w_\wr¬authtrace&},\\
         \is{e}{(w_s)_e},\,
         \is{h}{(w_s)_h},\,
         \is{&a\;&}{w_a&}
