--- a/text/overview.tex
+++ b/text/overview.tex
@@ -251,7 +251,7 @@ We describe this pipeline in detail in the relevant sections later.
 
 In \emph{YP} Ethereum, we have two kinds of accounts: \emph{contract accounts} (whose actions are defined deterministically based on the account's associated code and state) and \emph{simple accounts} which act as gateways for data to arrive into the world state and are controlled by knowledge of some secret key. In \Jam, all accounts are \emph{service accounts}. Like Ethereum's contract accounts, they have an associated balance, some code and state. Since they are not controlled by a secret key, they do not need a nonce.
 
-The question then arises: how can external data be fed into the world state of \Jam? And, by extension, how does overall payment happen if not by deducting the account balances of those who sign transactions? The answer to the first lies in the fact that our service definition actually includes \emph{multiple} code entry-points, one concerning \emph{refinement} and the other concerning \emph{accumulation}. The former acts as a sort of high-performance stateless processor, able to accept arbitrary input data and distill it into some much smaller amount of output data. The latter code is more stateful, providing access to certain on-chain functionality including the possibility of transferring balance and invoking the execution of code in other services. Being stateful this might be said to more closely correspond to the code of an Ethereum contract account.
+The question then arises: how can external data be fed into the world state of \Jam? And, by extension, how does overall payment happen if not by deducting the account balances of those who sign transactions? The answer to the first lies in the fact that our service definition actually includes \emph{multiple} code entry-points, one concerning \emph{refinement} and the other concerning \emph{accumulation}. The former acts as a sort of high-performance stateless processor, able to accept arbitrary input data and distill it into some much smaller amount of output data, which together with some metadata is known as a \emph{digest}. The latter code is more stateful, providing access to certain on-chain functionality including the possibility of transferring balance and invoking the execution of code in other services. Being stateful this might be said to more closely correspond to the code of an Ethereum contract account.
 
 To understand how \Jam breaks up its service code is to understand \Jam's fundamental proposition of generality and scalability. All data extrinsic to \Jam is fed into the refinement code of some service. This code is not executed \emph{on-chain} but rather is said to be executed \emph{in-core}. Thus, whereas the accumulator code is subject to the same scalability constraints as Ethereum's contract accounts, refinement code is executed off-chain and subject to no such constraints, enabling \Jam services to scale dramatically both in the size of their inputs and in the complexity of their computation.
 
